--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/ashokrajl/ashokrajl.github.io#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "mini-css-extract-plugin": "^1.3.5",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.19.0",
